# cmake_template

./: .gitignore  CMakeLists.txt  README.md
src/: hello_world.cpp
